--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "geist": "^1.3.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.469.0",
-    "next": "15.1.3",
+    "next": "^16.1.1",
     "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
